src/postix/static/troubleshooter/scss/postix.scss
@import "../../shared/scss/_variables";
$icon-font-path: "/static/postix/shared/fonts/";
@import "../../shared/scss/bootstrap/bootstrap";
@import "../../shared/fontawesome/scss/font-awesome";
@import "../../shared/scss/_postix";

body.login, body.error {
    background: #eee;
}
.panel-login {
    width: 400px;
    margin: 60px auto 0 auto;
}
.error-page {
    width: 400px;
    margin: 60px auto 0 auto;
    text-align: center;
}
.error-page h2 {
    font-size: 30px;
}
.error-page .glyphicon {
    font-size: 200px;
}
.glyphicon-log-out {
    margin-right: 0.5em;
}
/* Until crispy-forms master has merged PR #545, we need to correct this here. */
tbody th {
    font-weight: normal;
}
h1 a:hover {
    text-decoration: none;
}
h1 .glyphicon {
    font-size: 2rem;
    margin-right: 1em
}
.open-cashdesk h3 {
    margin-top: 0;
}
.open-cashdesk dl {
    margin-bottom: 0;
}
.ping {
    font-family: monospace;
}
.ping-form form {
    background-color: black;
    border-radius: 3px;
    color: white;
    font-family: monospace;
    margin-top: 1em;
}
.ping-log {
    background-color: black;
    border-radius: 3px;
    color: white;
    font-family: monospace;
    margin-top: 1em;
}
.ping-form form select {
    background-color: black;
    border: 1px solid grey;
    margin: 8px;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
}
.ping-form .btn-ping {
    background-color: black;
    border: 1px solid grey;
    font-size: 18px;
    font-weight: bold;
    margin: 0px;
    padding-left: 5px;
    padding-right: 5px;
    padding-top: 0px;
    padding-bottom: 0px;
}
.ping-form .btn-ping:hover {
    background-color: #0f0;
}
.info-content {
    margin: 3em;
    border: 1px solid grey;
    padding: 3em;
    width: 50%;
}
.transaction-filter-header {
    margin-bottom: 8px;
    form {
        display: flex;
        flex-direction: row;
        flex: 1 0 auto;
    }
}

